--- a/others/opportunities.html
+++ b/others/opportunities.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Opportunities</h1>
+        <h1>Opportunities for MUGDHO</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
